--- a/trunk/IntraSell_WebShop/skins/skin_ptec/pages/account/myAccount.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_ptec/pages/account/myAccount.htm
@@ -70,19 +70,19 @@
 																	<td valign="top" height="93" style="WIDTH: 87%">
 																		&nbsp;<table border="0" cellpadding="0" cellspacing="3" style="BORDER-COLLAPSE: collapse" bordercolor="#111111" width="100%" id="AutoNumber81">
 																			<tr>
-																				<td width="7%" align="middle"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																				<td width="7%" align="middle"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																				<td width="93%"><b>[COUNT_ORDERS]</b> meine offene <A href="default.asp?pageToShow=Rechnungs&amp;orderType=AU" >Bestellungen</a></td>
 																			</tr>
 																			<tr>
-																				<td width="7%" align="middle"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																				<td width="7%" align="middle"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																				<td width="93%"><b>[COUNT_ORDERED_PRODUCTS]</b> Liste <A href="default.asp?pageToShow=RechnungsArtikel&amp;orderType=AU">bestellte Produkte</a></td>
 																			</tr>
 																			<tr>
-																				<td width="7%" align="middle"><hr><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																				<td width="7%" align="middle"><hr><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																				<td width="93%"><hr><b>[COUNT_INVOICES]</b> Meine <A href="default.asp?pageToShow=Rechnungs&amp;orderType=AR">Rechnungen</a></td>
 																			</tr>
 																			<tr>
-																				<td width="7%" align="middle"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																				<td width="7%" align="middle"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																				<td width="93%"><b>[COUNT_ORDERED_PRODUCTS]</b> Liste <A href="default.asp?pageToShow=RechnungsArtikel&amp;orderType=AR">versendete Produkte</a></td>
 																			</tr>
 																			<tr>
@@ -90,11 +90,11 @@
 																				<td width="93%"><hr>&nbsp;</td>
 																			</tr>
 																			<tr>
-																				<td width="7%" align="middle"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																				<td width="7%" align="middle"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																				<td width="93%"><b>[COUNT_PRODUCTS_BOOKMARKS]</b> Produkte in <A href="default.asp?pageToShow=MyBookmarks&amp;description=Produkte">[TRANSLATION:Bookmark Liste]</a></td>
 																			</tr>
 																			<tr>
-																				<td width="7%" align="middle"><p align="center"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></p></td>
+																				<td width="7%" align="middle"><p align="center"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></p></td>
 																				<td width="93%"><b>[COUNT_CARTS_BOOKMARKS]</b> gespeicherte Warenkörbe <A href="default.asp?pageToShow=MyBookmarks&amp;description=Warenkorb">[TRANSLATION:Bookmark Liste]</a></td>
 																			</tr>
 																			<tr>
@@ -125,7 +125,7 @@
 																	<td width="227"></td>
 																</tr>
 																<tr>
-																	<td height="13" class="style5" width="21"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																	<td height="13" class="style5" width="21"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																	<td width="227" height="13">Ihr Passwort hier <A href="default.asp?PageToShow=ChangePassword">ändern</a></td>
 																</tr>
 																<tr>
@@ -133,7 +133,7 @@
 																	<td width="227" height="13">&nbsp;</td>
 																</tr>
 																<tr>
-																	<td height="13" class="style5" width="21"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																	<td height="13" class="style5" width="21"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																	<td width="227" height="13">Ihr Email hier <a href="default.asp?PageToShow=ChangeEmail">ändern</a></td>
 																</tr>
 																<tr>
@@ -145,7 +145,7 @@
 																	<td width="227" height="13">&nbsp;</td>
 																</tr>
 																<tr>
-																	<td height="13" class="style5" width="21"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																	<td height="13" class="style5" width="21"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																	<td width="227" height="13">Ihre Hauptadresse lautet:</td>
 																</tr>
 																<tr>
@@ -195,19 +195,19 @@
 																						<td width="93%" class="style4"></td>
 																					</tr>
 																					<tr>
-																						<td align="middle"> <b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																						<td align="middle"> <b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																						<td width="93%"> Bestellstatus <A href="default.asp?pageToShow=Rechnungs&amp;orderType=AU" >Bestellungen</a></td>
 																					</tr>
 																					<tr>
-																						<td align="middle"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																						<td align="middle"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																						<td width="93%">Bestellung stornieren</td>
 																					</tr>
 																					<tr>
-																						<td align="middle"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																						<td align="middle"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																						<td width="93%">Retournierung melden <A href="default.asp?pageToShow=RechnungsArtikel&amp;orderType=AR">versendete Produkte</a></td>
 																					</tr>
 																					<tr>
-																						<td align="middle"><b><IMG height=13 src="../images/button/doc.gif" width=11 border=0></b></td>
+																						<td align="middle"><b><IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b></td>
 																						<td width="93%">Defektes Produkt melden <A href="default.asp?pageToShow=RechnungsArtikel&amp;orderType=AR">versendete Produkte</a></td>
 																					</tr>
 																					<tr>
