--- a/trunk/IntraSell_WebShop/skins/skin_ptec/pages/account/myAccount_Information.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_ptec/pages/account/myAccount_Information.htm
@@ -132,7 +132,7 @@
                                                                         <td height="13" class="style1" width="24">
                                                                             <b>
                                                                                 &nbsp;
-                                                                                <IMG height=13 src="../images/button/doc.gif" width=11 border=0></b>
+                                                                                <IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b>
                                                                         </td>
                                                                         <td width="255" height="13">
                                                                             &nbsp;
@@ -148,7 +148,7 @@
                                                                     <tr>
                                                                         <td class="style1" width="24">
                                                                             <b>&nbsp;
-                                                                            <IMG height=13 src="../images/button/doc.gif" width=11 border=0></b>
+                                                                            <IMG height=13 src="../images/buttons/doc.gif" width=11 border=0></b>
                                                                         </td>
                                                                         <td width="255">
                                                                             &nbsp;Mein
