--- a/trunk/IntraSell_WebShop/skins/skin_ptec/pages/productPage_part1.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_ptec/pages/productPage_part1.htm
@@ -14,7 +14,7 @@
  
 	<tr>
 		<td width="150" valign="top" bgcolor="#C0C0C0" >
-		<img border="0" src="../images/spacer.gif" width="200" height="1">
+		<img border="0" src="../images/bg/spacer.gif" width="200" height="1">
  [CATEGORY_SUBLIST]
 <!--	
 	<div align="center">
