--- a/trunk/IntraSell_WebShop/skins/skin_ptec/pages/simpleSearchForm.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_ptec/pages/simpleSearchForm.htm
@@ -6,7 +6,7 @@
 		<tr>
 			<td nowrap>Produkt Suche: &nbsp;</td>
 			<td><input type="text" size="20" name="qu"></td>
-			<td><input type="image" class="extra" src="skins/skin_ptec/images/button/go.gif" valign="bottom" value="Search" name="I3" style="border: 0px solid #000;" border="0" hspace="5" align="center"></td>
+			<td><input type="submit" class="button"  value=">>" valign="bottom"  name="I3" style="border: 0px solid #000;" border="0" hspace="5" align="center"></td>
 		</tr>
 	</form> 
 </table>
