--- a/trunk/IntraSell_WebShop/skins/skin_ptec/pages/template_kategorie_produkte.html
+++ b/trunk/IntraSell_WebShop/skins/skin_ptec/pages/template_kategorie_produkte.html
@@ -1,6 +1,6 @@
 <table border="0" width="100%" id="table1" cellspacing="0" cellpadding="10">  
 	<tr>  
-		<td valign="top" colspan="2"><img border="0" src="../images/spacer.gif" height="1"></td>  
+		<td valign="top" colspan="2"><img border="0" src="../images/bg/spacer.gif" height="1"></td>  
 	</tr>  
 	<tr>  
 		<td width="207" valign="top" bgcolor="#C0C0C0">
