--- a/IntraSell_WebShop/skins/skin_ptec/pages/account/myAccountLogin.htm
+++ b/IntraSell_WebShop/skins/skin_ptec/pages/account/myAccountLogin.htm
@@ -11,7 +11,11 @@
 					<td colspan="2" width="100%" class="warenkorbTitle">[TRANSLATION:MEIN ACCOUNT LOGIN]</td>
 			  	</tr>
                 <tr>
-                    <td height="30">&nbsp; </td>
+                    <td height="30">&nbsp; <br>
+					<br>
+					<br>
+					<br>
+&nbsp;</td>
                 </tr>
             </table>
         </td>
@@ -164,10 +168,6 @@ function PasswordSend() {
             <br />
             <br />
             [NEWSLETTER]<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
 			<p><br />
             <br />
         </td>
