--- a/IntraSell_WebShop/skins/skin_ptec/pages/template_kategorie_default.html
+++ b/IntraSell_WebShop/skins/skin_ptec/pages/template_kategorie_default.html
@@ -21,11 +21,12 @@
 			
 			<table width="1256" border="0" cellpadding="0" cellspacing="0">
 				<tr>
-					<td align="center" width="180"><a href="http://www.ptec.co.at"><img src="../images/logo/logo.gif" border="0"></a></td>
+					<td align="center" width="183"><a href="http://www.ptec.co.at">
+					<img src="../images/logo/logo.gif" border="0" ></a></td>
 					
-					<td align="center" width="100%"><iframe src="skins/skin_ptec/flash_movie.html" width="864" height="140" scrolling="no" frameborder=no  marginheight="0" marginwidth="0"></iframe></td>					
-					<td align="center" width="199">
-						<table width="199" border="0" cellpadding="0" cellspacing="0">
+					<td align="center" width="70%"><iframe src="skins/skin_ptec/flash_movie.html" width="864" height="130" scrolling="no" frameborder=no  marginheight="0" marginwidth="0"></iframe></td>					
+					<td align="center" width="190">
+						<table width="190" border="0" cellpadding="0" cellspacing="0">
 							<tr>
 								<td width="199" align="center"><img src="../images/banners/BestellserviceImg.gif"></td>
 							</tr>
