--- a/trunk/IntraSell_WebShop/skins/skin_ptec/pages/productPage_part1.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_ptec/pages/productPage_part1.htm
@@ -14,8 +14,7 @@
  
 	<tr>
 		<td width="150" valign="top" bgcolor="#C0C0C0" >
-		<img border="0" src="../images/bg/spacer.gif" width="200" height="1">
- [CATEGORY_SUBLIST]
+		<img border="0" src="../images/bg/spacer.gif" width="150" height="1"> [CATEGORY_SUBLIST]
 <!--	
 	<div align="center">
 			<table border="0" width="180" id="table4" cellspacing="0" cellpadding="0">
@@ -28,7 +27,7 @@
  -->
 		</td>
 		<td  valign="top">
-          <font face="Verdana" size="1">[EMBED:productPage_part_common.htm]</font></td>
+        [EMBED:productPage_part_common.htm] </td>
 	</tr>
 </table>
 
