--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_warenkorbStep2.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_warenkorbStep2.htm
@@ -3,7 +3,7 @@
 <div align="center">
   <center>
 
-<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" id="AutoNumber26" bgcolor="#FFFFFF" width="96%">
+<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" id="AutoNumber26"  width="96%">
   <tr>
                         <td width="283">
                         &nbsp;</td>
@@ -21,8 +21,8 @@
                         &nbsp;</td>
   </tr>
   <tr>
-                        <td width="283">
-                        <p align="left"><b>&nbsp;[TRANSLATION:Warenkorb Step] 2/4</b>&nbsp;</p>
+                        <td width="283"  class="boxedText">
+                        <p align="left" ><b>&nbsp;[TRANSLATION:Warenkorb Step] 2/4</b>&nbsp;</p>
                       </td>
     <td height="13" align="right">
       
