--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_warenkorbstep4.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_warenkorbstep4.htm
@@ -2,7 +2,7 @@
 
 <div align="center">
 
-<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" id="AutoNumber26" bgcolor="#FFFFFF" width="96%">
+<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" id="AutoNumber26"  width="96%">
   <tr>
                         <td width="283"  >
                         <p align="right">&nbsp;</td>
@@ -20,7 +20,7 @@
                         &nbsp;</td>
   </tr>
   <tr>
-                        <td width="283"  >
+                        <td width="283"   class="boxedText" >
                         <p align="left"><b>&nbsp;[TRANSLATION:Warenkorb Step] 4/4</b>&nbsp;</p>
                       </td>
     <td height="13" align="right">
